--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-$font-header: 'Mitr', sans-serif;
-$font-text: 'Scada', sans-serif;
 body {
     margin: 0;
     text-align: center;
@@ -7,13 +5,18 @@ body {
     color: #3d3d3d;
     font-size: 16px;
     line-height: 1.7;
+    font-family: $font-tex
 }
-h1, h2 {
-    font-family: $font-header;
+.container {
+    max width: 1140px;
+    margin: 0 auto;
+    padding: 0 20px;
 }
 h1 {
     font-size: 30px;
+    color: blue
 }
 h2 {
     font-size: 20px;
+    color: green
 }
